--- a/jeaf-generator-test-custom-extension-usage/pom.xml
+++ b/jeaf-generator-test-custom-extension-usage/pom.xml
@@ -95,6 +95,7 @@
 					<addIgnoredHeadersToOpenAPISpec>true</addIgnoredHeadersToOpenAPISpec>
 					<openAPICommentStyle>&gt;-</openAPICommentStyle>
 					<openAPILiteralQuotationCharacter>'</openAPILiteralQuotationCharacter>
+					<openAPIExampleQuotationCharacter>'</openAPIExampleQuotationCharacter>
 					<restDefaultSuccessStatusCode>201</restDefaultSuccessStatusCode>
 					<restDefaultVoidStatusCode>202</restDefaultVoidStatusCode>
 
