--- a/jeaf-generator-test-spring-rest-proxy-reactive/pom.xml
+++ b/jeaf-generator-test-spring-rest-proxy-reactive/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.anaptecs.jeaf.generator</groupId>
 		<artifactId>jeaf-generator-project</artifactId>
-		<version>1.24.9</version>
+		<version>1.24.10-SNAPSHOT</version>
 	</parent>
 
 	<name>JEAF Generator Test Spring REST Proxy Reactive</name>
