--- a/jeaf-generator-test-model/pom.xml
+++ b/jeaf-generator-test-model/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.anaptecs.jeaf.generator</groupId>
 		<artifactId>jeaf-generator-project</artifactId>
-		<version>1.24.10</version>
+		<version>1.24.11-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>jeaf-generator-test-model</artifactId>
