--- a/jeaf-generator-test-custom-extension-usage/src-gen/main/resources/base/product-base.yml
+++ b/jeaf-generator-test-custom-extension-usage/src-gen/main/resources/base/product-base.yml
@@ -1060,7 +1060,7 @@ components:
               description: >-
                 
                 <br><br>
-                Breaking Change with PI 15: New mandatory association is required to support upcoming features.
+                Breaking Change with 2024-12-24: New mandatory association is required to support upcoming features.
               type: array
               items:
                 $ref: '#/components/schemas/UICStop'
