--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>com.anaptecs.jeaf</groupId>
 		<artifactId>jeaf-plugin-project-parent</artifactId>
-		<version>1.10.0</version>
+		<version>1.11.0</version>
 	</parent>
 
 	<groupId>com.anaptecs.jeaf.generator</groupId>
@@ -45,11 +45,11 @@
 		<jeaf.validation.impl.version>1.8.0</jeaf.validation.impl.version>
 		<jeaf.rest.api.version>2.0.0-RC1</jeaf.rest.api.version>
 		<jeaf.rest.impl.version>2.0.0-RC1</jeaf.rest.impl.version>
-		<jeaf.test.model.version>2.4.6-SNAPSHOT</jeaf.test.model.version>
+		<jeaf.test.model.version>2.4.6</jeaf.test.model.version>
 		<jeaf.generator.messages.version>1.18.0</jeaf.generator.messages.version>
 		
 		<!-- Please be aware that Spring Boot and Spring core versions must match together -->
-		<spring.boot.version>3.4.4</spring.boot.version>
+		<spring.boot.version>3.4.5</spring.boot.version>
 		<spring.core.version>6.2.6</spring.core.version>
 		<spring.security.version>6.4.5</spring.security.version>
 		<jakartaee-api.version>10.0.0</jakartaee-api.version>
