--- a/jeaf-generator-test-persistent-objects/pom.xml
+++ b/jeaf-generator-test-persistent-objects/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.anaptecs.jeaf.generator</groupId>
 		<artifactId>jeaf-generator-project</artifactId>
-		<version>1.24.11</version>
+		<version>1.24.12-SNAPSHOT</version>
 	</parent>
 
 	<name>JEAF Generator Test Persistent Objects</name>
