Fixed issues in OpenAPI comment

--- a/jeaf-generator-test-custom-extension-usage/src-gen/main/resources/base/product-base.yml
+++ b/jeaf-generator-test-custom-extension-usage/src-gen/main/resources/base/product-base.yml
@@ -860,7 +860,7 @@ components:
         - SNCF
         - DB: 
             <br><br>
-            Breaking Change with 3.x: New literal will occur (Properties: )
+            Breaking Change with 3.x: New literal will occur
       type: string
       enum:
         - 'SBB'
@@ -1972,11 +1972,11 @@ components:
         Alternate Name: Zeiteinheit
         <br><br>
         Valid Values:
-        - MINUTE: Literal represents time unit "minutes". (Properties: )
+        - MINUTE: Literal represents time unit "minutes".
         - HOUR
         - DAY
         - WEEK: Literal represents time unit "weeks".
-            This is the comments second line ;-) (Properties: )
+            This is the comments second line ;-)
         - MONTH
         - YEAR
       type: string
