Prepared development of next version

--- a/jeaf-generator-test-spring-boot3/src-gen/main/resources/base/product-base.yml
+++ b/jeaf-generator-test-spring-boot3/src-gen/main/resources/base/product-base.yml
@@ -1637,11 +1637,11 @@ components:
         * nova-base.xsd.ZeitEinheit
         <br><br>
         Valid Values:
-        - MINUTE: Literal represents time unit "minutes". (Properties: )
+        - MINUTE: Literal represents time unit "minutes".
         - HOUR
         - DAY
         - WEEK: Literal represents time unit "weeks".
-            This is the comments second line ;-) (Properties: )
+            This is the comments second line ;-)
         - MONTH
         - YEAR
       type: string
