Implemented generic builder for POJOs

--- a/jeaf-generator-test-pojos-generic-builder/pom.xml
+++ b/jeaf-generator-test-pojos-generic-builder/pom.xml
@@ -97,6 +97,7 @@
 
 					<!-- Define what should be generated. By default nothing is generated. -->
 					<generatePOJOs>true</generatePOJOs>
+					<useGenericBuilderPattern>true</useGenericBuilderPattern>
 					<generateEqualsAndHashCode>true</generateEqualsAndHashCode>
 					<enableDetailedToStringMethod>true</enableDetailedToStringMethod>
 					<generateJacksonAnnotations>true</generateJacksonAnnotations>
