--- a/jeaf-generator-test-pojos-generic-builder/pom.xml
+++ b/jeaf-generator-test-pojos-generic-builder/pom.xml
@@ -98,6 +98,7 @@
 					<!-- Define what should be generated. By default nothing is generated. -->
 					<generatePOJOs>true</generatePOJOs>
 					<useGenericBuilderPattern>true</useGenericBuilderPattern>
+					<generateImmutableClasses>true</generateImmutableClasses>
 					<generateEqualsAndHashCode>true</generateEqualsAndHashCode>
 					<enableDetailedToStringMethod>true</enableDetailedToStringMethod>
 					<generateJacksonAnnotations>true</generateJacksonAnnotations>
