Implemented deprecation report part of #477

--- a/jeaf-generator-test-deprecation-report/pom.xml
+++ b/jeaf-generator-test-deprecation-report/pom.xml
@@ -72,6 +72,9 @@
 					<javaDeprecationReportName>My Java Deprecation Report</javaDeprecationReportName>
 					<javaDeprecationReportFileName>../../../../Java_Deprecation_Report</javaDeprecationReportFileName>
 					
+					<nextMajorReleasePublishingDate>2024-12-24</nextMajorReleasePublishingDate>
+					<nextMajorReleaseVersion>4711.0</nextMajorReleaseVersion>
+					
 					<generateSecurityRolesReport>true</generateSecurityRolesReport>
 					<securityRolesReportName>My Roles Report</securityRolesReportName>
 					<listUnsecuredRESTEndpoints>true</listUnsecuredRESTEndpoints>
