Implemented an tested #412 for single valued properties

--- a/jeaf-generator-test-open-api/src-gen/main/resources/base/product-base.yml
+++ b/jeaf-generator-test-open-api/src-gen/main/resources/base/product-base.yml
@@ -1843,6 +1843,11 @@ components:
           format: int32
           nullable: false
           default: 4711
+        inlineSortimentType:
+          type: string
+          x-extensible-enum:
+            - B2C_SORTIMENT
+            - EMPLOYEE_SORTIMENT
 
     # com.anaptecs.jeaf.junit.openapi.base.Stop
     Stop:
