--- a/jeaf-generator-test-custom-extension-usage/src-gen/main/resources/base/product-base.yml
+++ b/jeaf-generator-test-custom-extension-usage/src-gen/main/resources/base/product-base.yml
@@ -1891,6 +1891,11 @@ components:
           format: int32
           nullable: false
           default: 4711
+        inlineSortimentType:
+          type: string
+          x-extensible-enum:
+            - 'B2C_SORTIMENT'
+            - 'EMPLOYEE_SORTIMENT'
 
     # com.anaptecs.jeaf.junit.openapi.base.Stop
     Stop:
