--- a/jeaf-generator-test-open-api/src-gen/main/resources/base/product-base.yml
+++ b/jeaf-generator-test-open-api/src-gen/main/resources/base/product-base.yml
@@ -1848,6 +1848,14 @@ components:
           x-extensible-enum:
             - B2C_SORTIMENT
             - EMPLOYEE_SORTIMENT
+        types:
+          type: array
+          items:
+            type: string
+            x-extensible-enum:
+              - B2C_SORTIMENT
+              - EMPLOYEE_SORTIMENT
+          deprecated: true
 
     # com.anaptecs.jeaf.junit.openapi.base.Stop
     Stop:
@@ -1967,6 +1975,8 @@ components:
             - priority
             - code
             - index2
+            - inlineStopTypes
+            - inlineStopType
           properties:
             uicCode:
               type: string
@@ -1993,6 +2003,19 @@ components:
               minimum: 0
               exclusiveMinimum: true
               nullable: false
+            inlineStopTypes:
+              type: array
+              items:
+                type: string
+                enum:
+                  - REAL_STOP
+                  - VIRTUAL_STOP
+            inlineStopType:
+              type: string
+              enum:
+                - REAL_STOP
+                - VIRTUAL_STOP
+              deprecated: true
 
     # com.anaptecs.jeaf.junit.openapi.base.UICStopPlace
     UICStopPlace:
