Allow to inline enums in OpenAPI spec #412 (#506)
* Implemented an tested #412 for single valued properties

* Updated JMM version check

* Implementation and test complete

* Fixed issues

* Updated model

* Switched to released version of UML test model

--- a/jeaf-generator-test-custom-extension-usage/src-gen/main/resources/base/product-base.yml
+++ b/jeaf-generator-test-custom-extension-usage/src-gen/main/resources/base/product-base.yml
@@ -1891,6 +1891,19 @@ components:
           format: int32
           nullable: false
           default: 4711
+        inlineSortimentType:
+          type: string
+          x-extensible-enum:
+            - 'B2C_SORTIMENT'
+            - 'EMPLOYEE_SORTIMENT'
+        types:
+          type: array
+          items:
+            type: string
+            x-extensible-enum:
+              - 'B2C_SORTIMENT'
+              - 'EMPLOYEE_SORTIMENT'
+          deprecated: true
 
     # com.anaptecs.jeaf.junit.openapi.base.Stop
     Stop:
@@ -2010,6 +2023,8 @@ components:
             - priority
             - code
             - index2
+            - inlineStopTypes
+            - inlineStopType
           properties:
             uicCode:
               type: string
@@ -2033,6 +2048,19 @@ components:
               format: int32
               exclusiveMinimum: 0
               nullable: false
+            inlineStopTypes:
+              type: array
+              items:
+                type: string
+                enum:
+                  - 'REAL_STOP'
+                  - 'VIRTUAL_STOP'
+            inlineStopType:
+              type: string
+              enum:
+                - 'REAL_STOP'
+                - 'VIRTUAL_STOP'
+              deprecated: true
 
     # com.anaptecs.jeaf.junit.openapi.base.UICStopPlace
     UICStopPlace:
