--- a/jeaf-generator-test-service-objects-jakarta/src-gen/main/resources/base/product-base.yml
+++ b/jeaf-generator-test-service-objects-jakarta/src-gen/main/resources/base/product-base.yml
@@ -1843,6 +1843,19 @@ components:
           format: int32
           nullable: false
           default: 4711
+        inlineSortimentType:
+          type: string
+          x-extensible-enum:
+            - B2C_SORTIMENT
+            - EMPLOYEE_SORTIMENT
+        types:
+          type: array
+          items:
+            type: string
+            x-extensible-enum:
+              - B2C_SORTIMENT
+              - EMPLOYEE_SORTIMENT
+          deprecated: true
 
     # com.anaptecs.jeaf.junit.openapi.base.Stop
     Stop:
@@ -1962,6 +1975,8 @@ components:
             - priority
             - code
             - index2
+            - inlineStopTypes
+            - inlineStopType
           properties:
             uicCode:
               type: string
@@ -1988,6 +2003,19 @@ components:
               minimum: 0
               exclusiveMinimum: true
               nullable: false
+            inlineStopTypes:
+              type: array
+              items:
+                type: string
+                enum:
+                  - REAL_STOP
+                  - VIRTUAL_STOP
+            inlineStopType:
+              type: string
+              enum:
+                - REAL_STOP
+                - VIRTUAL_STOP
+              deprecated: true
 
     # com.anaptecs.jeaf.junit.openapi.base.UICStopPlace
     UICStopPlace:
