--- a/jeaf-generator-test-pojos-generic-builder/pom.xml
+++ b/jeaf-generator-test-pojos-generic-builder/pom.xml
@@ -106,6 +106,7 @@
 					<generateHeavyExtensibleEnums>true</generateHeavyExtensibleEnums>
 					
 					<generateOfOperation>true</generateOfOperation>
+					<generateOfOperationForOpenAPIDataType>true</generateOfOperationForOpenAPIDataType>
 					<generateValueOfForOpenAPIDataTypes>false</generateValueOfForOpenAPIDataTypes>
 
 					<suppressWarnings>JEAF_SUPPRESS_WARNINGS</suppressWarnings>
