--- a/jeaf-generator-beautifier/pom.xml
+++ b/jeaf-generator-beautifier/pom.xml
@@ -3,7 +3,7 @@
     <parent>
 		<groupId>com.anaptecs.jeaf.generator</groupId>
 		<artifactId>jeaf-generator-project</artifactId>
-		<version>1.26.2</version>
+		<version>1.26.3-SNAPSHOT</version>
     </parent>
 
     <name>JEAF Generator Beautifier</name>
