--- a/jeaf-generator-test-deprecation-report/pom.xml
+++ b/jeaf-generator-test-deprecation-report/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.anaptecs.jeaf.generator</groupId>
 		<artifactId>jeaf-generator-project</artifactId>
-		<version>1.26.2</version>
+		<version>1.26.3-SNAPSHOT</version>
 	</parent>
 
 	<name>JEAF Generator Test Deprecation Report</name>
