--- a/jeaf-generator-test-jeaf-rest-proxy/pom.xml
+++ b/jeaf-generator-test-jeaf-rest-proxy/pom.xml
@@ -195,6 +195,7 @@
 					<suppressTechnicalHeaders>true</suppressTechnicalHeaders>
 
 					<generateOfOperation>true</generateOfOperation>
+					<generateOfOperationForOpenAPIDataType>true</generateOfOperationForOpenAPIDataType>
 					<generateValueOfForOpenAPIDataTypes>false</generateValueOfForOpenAPIDataTypes>
 
 					<generateRESTServiceProxies>true</generateRESTServiceProxies>
