--- a/jeaf-generator-test-services-api/.settings/org.eclipse.core.resources.prefs
+++ b/jeaf-generator-test-services-api/.settings/org.eclipse.core.resources.prefs
@@ -2,6 +2,7 @@ eclipse.preferences.version=1
 encoding//src-gen/main/java=UTF-8
 encoding//src-gen/main/resources=UTF-8
 encoding//src/main/java=UTF-8
+encoding//src/test/java=UTF-8
 encoding/<project>=UTF-8
 encoding/src=UTF-8
 encoding/src-gen=UTF-8
