--- a/jeaf-generator-test-custom-extension-usage/src-gen/main/resources/products/product-services.yml
+++ b/jeaf-generator-test-custom-extension-usage/src-gen/main/resources/products/product-services.yml
@@ -15,6 +15,8 @@ info:
   license:
     name: Apache 2.0
     url: 'https://www.apache.org/licenses/LICENSE-2.0.html'
+  x-hello: Hello World!
+  x-non-sense: This is grab ;-)
 
 servers:
   - url: https://accounting.jeaf.de
